references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/BindingConnector_invalid0.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:2b55920558aacada54cc6e9f2e76173a605f04abeb6708f109fde0d62c1e2a10
size 1295
